# epic.py

./: .gitignore  Cargo.toml  build_python.sh  dev_wasm.sh  ecs_system.py  engine.py  game.spec  gen-program.py  install.sh  main.op  main.py  op_lexer.py  op_parser.py  op_transpiler.py  output.py  requirement.txt  run.sh  sample.py  src.json  state.py
ecs/: ecs_component.py  ecs_system.py
op_lang/: __init__.py  main.op  main.py  op_lexer.py  op_parser.py  op_transpiler.py
py-env/: build.py  dotdict.py  engine.py  game.py  meta.py  rect.py
py-env/ecs/: ecs_component.py
py-env/engine/: engine.py  meta.py  rect.py
pygame_engine/: engine.py  game_code.py  gen-program.py  main.py  src.json
pygame_engine/ecs/: types.py
pygame_engine/op_lang/: __init__.py  main.py  op_base_parser.py  op_transpiler.py
src/: grammar.md  js_transpiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  py_transpiler.rs  src.json  src.op  sym_analyzer.rs  transpiler.rs  whole_src.op
src/meta/: js_meta.rs  meta.rs  mod.rs
src/op_lang/: compile.rs  grammar.md  js_transpiler.rs  lexer.rs  mod.rs  parser.rs  py_transpiler.rs  sym_analyzer.rs  transpiler.rs
src/op_lang/test/basics/: arth_ops.op  boolean_ops.op  for_loop.op  hashmap.op  var_dec_ass.op  while_loop.op
src/op_lang/test/error/: function_decl.op
src/pybuild/: build.rs
src/test/: arth_ops.op  func_decl.op
src/test/basics/: arrays.op  condition.op  func_call.op
src/test/error/: function_decl.op  variable_function_scopes.op
