[package]
name = "epic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "epic"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "mybin"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0.116"